# feishu-auto-liker-gui

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOGS.md  README.md  build.py  build_mac.sh  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-linux.yml  build-macos.yml
dev-docs/: dev-status-tracking.md  implementer-prompt.md  review.md
docs/superpowers/plans/: 2026-04-10-message-detection-fix-plan.md
docs/superpowers/specs/: 2026-04-10-message-detection-fix-design.md
src/: __init__.py  __main__.py
src/config/: __init__.py  constants.py  defaults.py
src/core/: __init__.py  bot.py  constants.py  matcher.py
src/gui/: app.py
src/gui/tabs/: __init__.py  console.py  console_tab.py  install.py  install_tab.py  settings.py  settings_tab.py
src/installer/: __init__.py  checker.py
src/state/: __init__.py  tracker.py
tests/: conftest.py  test_bot_state.py  test_browser_exception.py  test_config.py  test_core_constants.py  test_gui_timer.py  test_matcher.py
tests/config/: test_config.py
tests/core/: test_bot.py  test_bot_async.py  test_bot_async_extended.py  test_core_constants.py  test_matcher.py  test_rpa_bot.py
tests/gui/: test_app.py  test_gui_timer.py
tests/gui/tabs/: test_console_tab.py  test_install_tab.py  test_settings_tab.py
tests/installer/: test_checker.py
tests/state/: test_tracker.py
