[project]
name = "feishu-auto-liker-gui"
version = "0.1.0"
description = "飞书自动点赞助手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "packaging>=23.0",
    "subprocess-tee>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["main"]
omit = ["tests/*", "build/*", "dist/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
